finish 2nd edition

--- a/Application/Admin/View/Finance/account_list.html
+++ b/Application/Admin/View/Finance/account_list.html
@@ -74,7 +74,7 @@
                             <?php  echo $account_types[$gl['trade_type']]; ?>
                         </td>
                         <td class="table-textcenter">
-                            <?php  echo $reward_types[$gl['reward_code']]; ?>
+                            <?php  echo $trade_types[$gl['trade_code']]; ?>
                         </td>
 
                         <td class="table-textcenter">{$gl.desc}</td>
