--- a/Application/Seller/View/Refund/index.html
+++ b/Application/Seller/View/Refund/index.html
@@ -26,7 +26,7 @@
                             <tr>
                                 <?php $order = M('OrderInfo')->where('order_sn='.$ol['order_sn'])->find();
                                  ?>
-                                <th colspan="6" class="column-info column-t"> <div class="column-content"> 订单号：<a href="">{$order.order_sn}</a><span class="sep">|</span>联系人：{$order.consignee}<span class="sep">|</span>收货地址：{$order.address}<span class="sep">|</span>联系电话：{$order.mobile}<span class="sep">|</span>预定时间：{$order.order_time|date="Y-m-d h:i:s",###} </div>
+                                <th colspan="6" class="column-info column-t"> <div class="column-content"> 订单号：<a href="">{$order.order_sn}</a><span class="sep">|</span>联系人：{$order.consignee}<span class="sep"> |</span>联系电话：{$order.mobile}<span class="sep">|</span>创建时间：{$order.order_time|date="Y-m-d h:i:s",###} </div>
                                 </th>
                                 <th class="column-info column-t">
                                     <div class="operates">
@@ -45,7 +45,7 @@
                                                 <img  src="/Uploads/{$og.goods_img}" class="goods-thumb">
                                             </a>
                                             <div class="desc"style="width:400px;">
-                                                <p class="baobei-name"> <a href="/product/{$og.goods_id}.html" target="_blank">{$og.goods_name}</a> </p>
+                                                <p class="baobei-name"> <a href="javascript:void(0);" target="_blank">{$og.goods_name}</a> </p>
                                             </div>
                                             <div class="desc" style="width:90px;margin-left: 20px;"> <i class="special-num">单价：{$og.price}</i><br>
                                                 <i class="special-num">数量：{$og.prosum}</i><br>
