--- a/Application/Seller/View/Goods/extend.html
+++ b/Application/Seller/View/Goods/extend.html
@@ -37,10 +37,10 @@
 	$("input[name='spec_type']").click(function(){
 		if($(this).is(":checked")){
 			$("#duoguige").show();
-			$("#danyiguige").hide();
+//			$("#danyiguige").hide();
 		}else{
 			$("#duoguige").hide();
-			$("#danyiguige").show();
+//			$("#danyiguige").show();
 		}
 	});
 </script>
