--- a/Application/Admin/View/Finance/_account_list.html
+++ b/Application/Admin/View/Finance/_account_list.html
@@ -4,14 +4,16 @@
             <form action="{:U('Finance/rechargeList')}" method="get">
                 <h4><small>充值明细列表</small></h4>
                 <div class="form-group">
-                 
-
-                   
 
                     <select name="trade_status" class="form-control inline-block" style="width: 100px; height:30px; float: left;border-color: #d2d6de;font-size:12px;border-radius:3px;">
-                        <option value="0">交易状态</option>
-                        <?php foreach ($trade_statuss as $k=>$v){ ?>
-                        <option value="{$k}" <if condition="$k eq $trade_status">selected</if>>{$v}</option>
+                        <option value="-1">交易状态</option>
+                        <?php
+                         foreach ($trade_statuss as $k=>$v){ ?>
+                            <option value="{$k}"
+                            <?php if ($trade_status!==false) { ?>
+                        <if condition="$k eq $trade_status">selected</if>
+                            <?php } ?>
+                        >{$v}</option>
                         <?php } ?>
                     </select>
 
