--- a/Application/Admin/View/Finance/settlement_detail.html
+++ b/Application/Admin/View/Finance/settlement_detail.html
@@ -1,9 +1,18 @@
 <section class="content-header">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <h4><small>结算明细 - <?php echo $store['store_name']; ?></small></h4>
-        </div>
-        <div class="col-md-4 right_menu">
+
+            <form action="{:U('Finance/settlementList')}" method="get">
+                <div class="form-group">
+                    <div class="input-group input-group-sm" style="margin-left:5px;width: 200px;display: inline-flex;">
+                        <input class="form-control" type="text" name="order_sn" value="{$order_sn}" placeholder="订单号">
+                        <span class="input-group-btn">
+						<button type="submit" class="btn btn-info btn-flat">搜索</button>
+						</span>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </section>
