--- a/Application/Admin/View/Setting/info.html
+++ b/Application/Admin/View/Setting/info.html
@@ -1,6 +1,6 @@
 <section class="content-header">
 	<div class="row">
-		<div class="col-md-11"><h4><small>基本信息</small></h4></div>
+		<div class="col-md-11"><h4><small>基本设置</small></h4></div>
 	</div>
 </section>
 <section class="content">
