--- a/Application/Seller/View/Refund/index.html
+++ b/Application/Seller/View/Refund/index.html
@@ -45,7 +45,7 @@
                                                 <img  src="/Uploads/{$og.goods_img}" class="goods-thumb">
                                             </a>
                                             <div class="desc"style="width:400px;">
-                                                <p class="baobei-name"> <a href="javascript:void(0);" target="_blank">{$og.goods_name}</a> </p>
+                                                <p class="baobei-name"> <a href="javascript:void(0);" target="_blank">{$og.goods_name}</a> <em style="color:#ff2222">x {$og.prosum}</em> </p>
                                             </div>
                                             <div class="desc" style="width:90px;margin-left: 20px;"> <i class="special-num">单价：{$og.price}</i><br>
                                                 <i class="special-num">数量：{$og.prosum}</i><br>
@@ -54,15 +54,15 @@
                                         </li>
                                     </ul>
                                 </td>
-                                <td class="column-price"><div  class="order-info order-price">退款现金：￥{$ol.cash}</div></td>
-                                <td class="column-price"><div  class="order-info order-price">退款一券通：￥{$ol.yqt}</div></td>
-                                <td class="column-price"><div  class="order-info order-price">退款购物卷：￥{$ol.gwq}</div></td>
-                                <td class="column-price"><div  class="order-info order-price">退款合计：￥{$ol.amount}</div></td>
+                                <td class="column-price"><div  class="order-info order-price">退现金：￥{$ol.cash}</div></td>
+                                <td class="column-price"><div  class="order-info order-price">退一券通：￥{$ol.yqt}</div></td>
+                                <td class="column-price"><div  class="order-info order-price">退购物卷：￥{$ol.gwq}</div></td>
+                                <td class="column-price"><div  class="order-info order-price">理由：{$ol.reason}</div></td>
                                 <td class="column-action">
                                     <?php echo $status_array[$ol['status']]; ?>
                                 </td>
                                 <td class="column-action">
-                                    <a href="<?php echo U('Seller/Refund/judge/refund_id/'.$ol['refund_id']); ?>"  class="btn">编辑</a>
+                                    <a href="<?php echo U('Seller/Refund/judge/refund_id/'.$ol['refund_id']); ?>"  class="btn">操作</a>
                                 </td>
 
                             </tr>
