--- a/Static/Seller/Css/olist.css
+++ b/Static/Seller/Css/olist.css
@@ -72,7 +72,8 @@
 .uc-order-detail-item .order-detail-table .column-info .column-content {
 	position: relative;
 	height: 21px;
-	padding: 10px 20px
+	padding: 10px 20px;
+	font-size: 0.75rem;
 }
 
 .uc-order-detail-item .order-detail-table .column-info .order-status {
