--- a/Application/Admin/View/Goods/goods_list.html
+++ b/Application/Admin/View/Goods/goods_list.html
@@ -104,10 +104,10 @@
                         <td class="table-textcenter">
 <!--                         	<a class="btn btn-success btn-xs" href="" target="blank" >规格</a>&nbsp;&nbsp; -->
                         	<if condition="$seller neq 1">
-                        	<a class="btn btn-info btn-xs" href="{:U('Goods/edit?goods_id='.$gl['goods_id'])}">编辑</a>&nbsp;&nbsp;
+                        	<a class="btn btn-info btn-xs" href="{:U('Goods/info?goods_id='.$gl['goods_id'])}">编辑</a>&nbsp;&nbsp;
                         	<a class="btn btn-danger btn-xs" href="{:U('Goods/delete?goods_id='.$gl['goods_id'])}">删除</a>
                         	<else/>
-							<a class="btn btn-primary btn-xs" href="{:U('Goods/edit?goods_id='.$gl['goods_id'])}">编辑</a>&nbsp;
+							<a class="btn btn-primary btn-xs" href="{:U('Goods/info?goods_id='.$gl['goods_id'])}">编辑</a>&nbsp;
                         	<a class="btn btn-info btn-xs" href="{:U('Goods/examine?examine_status=1&goods_id='.$gl['goods_id'])}">审核通过</a>&nbsp;&nbsp;
                         	<a class="btn btn-danger btn-xs" href="{:U('Goods/examine?examine_status=3&goods_id='.$gl['goods_id'])}">违规下架</a>
                         	</if>
