--- a/Application/Admin/View/Goods/newinfo.html
+++ b/Application/Admin/View/Goods/newinfo.html
@@ -72,6 +72,7 @@
                 {:fastModule('form-group',array('额外赠送购物券'),array('text','gwq_extra',$goods_info['gwq_extra']))}
                 {:fastModule('form-group',array('可用一卷通数额[购买此商品能用最大值]'),array('text','yjt_can',$goods_info['yjt_can']))}
                 {:fastModule('form-group',array('可用购物券数额[购买此商品能用最大值]'),array('text','gwq_can',$goods_info['gwq_can']))}
+                {:fastModule('form-group',array('捐赠数额'),array('text','love_amount',$goods_info['love_amount']))}
                 <!--<dl>-->
                 <!--<dt class="required"><i class="required">*</i>商品属性：</dt>-->
                 <!--<dd id="attr_values_div"> </dd>-->
