--- a/Application/Seller/View/Order/olist.html
+++ b/Application/Seller/View/Order/olist.html
@@ -44,7 +44,17 @@
 											<img alt="{$ol.lineTitle}"  src="/Uploads/Mall/Seller/{$ol.store_id}/{$goods.goods_img}" class="goods-thumb"> 
 										</a>
 										<div class="desc"style="width:400px;">
-											<p class="baobei-name"> <a href="/product/{$goods.goods_id}.html" target="_blank">{$goods.goods_name}</a> </p>
+											<p class="baobei-name"> <a href="javascript:void(0);" target="_blank">{$goods.goods_name}
+											<?php
+											 if ($goods['spec_id']) { ?>
+												<b class="attr-name">【<?php
+														$spec = M("GoodsSpec")->where('spec_id ='.$goods['spec_id'])->find();
+														if ($spec) {
+															echo str_replace("\r\n", "", $spec['spec_name']);
+														}
+													?>】</b>
+											<?php } ?>
+											</a> </p>
 										</div>
 										<div class="desc" style="width:90px;margin-left: 20px;"> <i class="special-num">单价：{$goods.price}</i><br>
 											<i class="special-num">数量：{$goods.prosum}</i><br>
