--- a/Application/Admin/View/Finance/settlement_detail.html
+++ b/Application/Admin/View/Finance/settlement_detail.html
@@ -3,10 +3,11 @@
         <div class="col-md-12">
             <h4><small>结算明细 - <?php echo $store['store_name']; ?></small></h4>
 
-            <form action="{:U('Finance/settlementList')}" method="get">
+            <form action="{:U('Finance/settlement_detail')}" method="get">
                 <div class="form-group">
                     <div class="input-group input-group-sm" style="margin-left:5px;width: 200px;display: inline-flex;">
                         <input class="form-control" type="text" name="order_sn" value="{$order_sn}" placeholder="订单号">
+                        <input type="hidden" value="{$store.store_id}" name="store_id" >
                         <span class="input-group-btn">
 						<button type="submit" class="btn btn-info btn-flat">搜索</button>
 						</span>
