--- a/Application/Seller/View/Order/olist.html
+++ b/Application/Seller/View/Order/olist.html
@@ -40,8 +40,8 @@
 								<ul class="order-goods-list">
 									<volist name="ol.order_goods" id="goods" key="gg"> 
 									<li <if condition="$gg eq 1">class="first"</if>> 
-										<a href="javascript:;" target="_blank"> 
-											<img alt="{$ol.lineTitle}"  src="/Uploads/Mall/Seller/{$ol.store_id}/{$goods.goods_img}" class="goods-thumb"> 
+										<a href="javascript:;" target="_blank">
+											<img alt="{$ol.lineTitle}"  src="/Uploads/{$goods.goods_img}" class="goods-thumb">
 										</a>
 										<div class="desc"style="width:400px;">
 											<p class="baobei-name"> <a href="javascript:void(0);" target="_blank">{$goods.goods_name}
