--- a/Application/Seller/View/Order/olist.html
+++ b/Application/Seller/View/Order/olist.html
@@ -41,7 +41,7 @@
 									<volist name="ol.order_goods" id="goods" key="gg"> 
 									<li <if condition="$gg eq 1">class="first"</if>> 
 										<a href="javascript:;" target="_blank">
-											<img alt="{$ol.lineTitle}"  src="/Uploads/{$goods.goods_img}" class="goods-thumb">
+											<img alt="{$ol.lineTitle}"  src="{$goods.goods_img}" class="goods-thumb">
 										</a>
 										<div class="desc"style="width:400px;">
 											<p class="baobei-name"> <a href="javascript:void(0);" target="_blank">{$goods.goods_name}
